new components builder

--- a/components.html
+++ b/components.html
@@ -16,6 +16,7 @@
 <script src="webcomponentsjs/webcomponents.js"></script>
 <link rel="import" href="imports.html">
 <link rel="import" href="docs-maker/z-doc.html">
+<script src="info.js"></script>
 
 <style>
   @font-face {font-family: 'Russo One'; font-style: normal; font-weight: 400; src: local('Russo One'), local('RussoOne-Regular'), url(fonts/RussoOne.woff2) format('woff2'), url(fonts/RussoOne.woff) format('woff');}
