--- a/components.html
+++ b/components.html
@@ -14,8 +14,6 @@
 <link rel="apple-touch-icon" sizes="512x512" href="logo/logo_512x512.png">
 
 <script src="webcomponentsjs/webcomponents.js"></script>
-<link rel="import" href="imports.html">
-<link rel="import" href="docs-maker/z-doc.html">
 <script src="info.js"></script>
 
 <style>
@@ -49,6 +47,11 @@
 </head>
 <body>
 
+<link rel="import" href="imports.html">
+<link rel="import" href="docs-maker/z-doc.html">
+
+<a href="https://github.com/zorro-html/zorro"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 101;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+
 <z-bar>
   <div layout="" horizontal="" start="" style="margin-top: 5px;">
     <div style="margin-right: 15px;">
@@ -59,7 +62,7 @@
       <p style="margin: 0;">Hiding Goods in the Shadow</p>
     </div>
   </div>
-  <z-bar-minor>
+  <z-bar-minor style="margin-right: 120px;">
     Dev by @&#x52FE;&#x4E09;&#x80A1;&#x56DB; |
     <a target="_blank" href="http://weibo.com/mx006">Weibo</a> |
     <a target="_blank" href="https://github.com/Jinjiang">Github</a> |
