--- a/components.html
+++ b/components.html
@@ -30,8 +30,8 @@
 
   body > z-bar {position: fixed; top: 0; left: 0; right: 0; z-index: 100;}
 
-  body >section {max-width: 800px; margin: 0 auto 20px; padding: 0 20px;}
-  body >section > h1 {background-color: #f0f0f0; background-image: url(logo/logo_64x64.png); background-size: 32px 32px; background-repeat: no-repeat; background-position: 20px center; padding: 15px 10px 15px 60px; border-radius: 3px; margin-left: -10px; margin-right: -10px;}
+  body > section {max-width: 800px; margin: 0 auto 20px; padding: 0 20px;}
+  body > section > h1 {background-color: #f0f0f0; background-image: url(logo/logo_64x64.png); background-size: 32px 32px; background-repeat: no-repeat; background-position: 20px center; padding: 15px 10px 15px 60px; border-radius: 3px; margin-left: -10px; margin-right: -10px;}
 
   section {margin-bottom: 10px;}
   section::before,
@@ -49,7 +49,9 @@
   section[name="z-input"] z-form {width: 320px;}
   section[name="z-input"] #form z-input-text,
   section[name="z-input"] #form z-input-select {display: block;}
+</style>
 
+<style shim-shadowdom>
   z-doc /deep/ hr {display: none;}
   z-doc /deep/ hr + p:last-child {display: none;}
 </style>
