--- a/debug.html
+++ b/debug.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 
-<title>Components - Zorro - Hiding Goods in the Shadow</title>
+<title>Zorro - Hiding Goods in the Shadow</title>
 
 <link rel="icon" href="logo/z_16x16.png">
 <link rel="apple-touch-icon" href="logo/z.png">
