--- a/index.html
+++ b/index.html
@@ -5050,7 +5050,7 @@ Specify a language and theme:
 
 <section name="logo">
   <img src="logo/z_512x512.png">
-  <h1>A web components framework &amp; gallery</h1>
+  <h1>A collection of web components to easily use.</h1>
   <p><z-btn primary="" lg="" href="https://github.com/zorro-html/zorro">View on Github</z-btn></p>
   <!-- <iframe src="http://ghbtns.com/github-btn.html?user=Jinjiang&repo=zorro&type=watch&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe> -->
 </section>
